# runpod-playground

./: .env  .env.example  .gitignore  Makefile  README.md  download_model.py  pyproject.toml
configs/tabbyAPI/: sample_overrides.yml
docker/: Dockerfile_simple  entrypoint.sh
notebooks/: create_pod.ipynb  finetuning_mistral_unsloth.ipynb  model_test.ipynb  vllm_playground.ipynb
runpod_playground/: download_model.py  serverless_predict.py
runpod_playground/gui/: main.py
scripts/: add_to_crontab.sh  download_model.sh  healthcheck_model_api.sh  initial_install.sh  install_uv.sh  run_preodically_basic.sh  run_preodically_crontab.sh  send_api_chat_message.sh  send_teams_message.sh  start_aphrodite.sh  start_tabbyapi.sh  start_vllm.sh  vllm_warm_up_cache.sh
scripts/old/: start_tabbyapi.sh
tabbyAPI/: config.yml
tabbyAPI/prompt_templates/: codestral.jinja  codestral_gguf.jinja
