[project]
name = "runpod-playground"
version = "0.1.0"
description = "Runpod Playground"
authors = [
    { name = "ilkersigirci", email = "sigirci.ilker@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "huggingface-hub>=0.23.0",
    "runpod>=1.6.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff==0.6.2",
    "ipykernel>=6.29.3",
    "vllm>=0.5.5",
]

[tool.ruff]
target-version = "py311"
line-length = 88
respect-gitignore = true

# extend-include = []

extend-exclude = [
    "docs",
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
# "*.ipynb" = ["E501"]  # disable line-too-long in notebooks

[tool.ruff.format]
skip-magic-trailing-comma = false
# indent-style = "space"
# preview = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C9",  # mccabe
    # "D",  # flake8-docstrings
    "E",  # pycodestyle errors (default)
    "F",  # pyflakes (default)
    "I",  # isort
    "PD", # pandas-vet
    "PIE", # pie
    # "PL",  # pylint
    # "PTH", # pathlib
    "Q",  # flake8-quotes
    "RET", # return
    "RUF", # Enable all ruff-specific checks
    "SIM", # simplify
    "S307", # eval
    # "T20",  # (disallow print statements) keep debugging statements out of the codebase
    "W",  # pycodestyle warnings
    "ASYNC", # async
]

ignore = [
    "E501",  # Line too long, handled by ruff formatter
    "D107", # "Missing docstring in __init__",
]

# unfixable = [
#     "F401" # Unused imports.
# ]

#extend-select = []


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
