[project]
name = "runpod-playground"
version = "0.1.0"
description = "Runpod Playground"
authors = [
    { name = "ilkersigirci", email = "sigirci.ilker@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "accelerate>=0.34.2",
    "hf-transfer>=0.1.8",
    "huggingface-hub[cli]",
    "mistral-common>=1.5.0",
    "modelscope>=1.18.0",
    "runpod>=0.24.6",
    "vllm>=0.6.4.post1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
respect-gitignore = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
# "*.ipynb" = ["E501"]  # disable line-too-long in notebooks

[tool.ruff.format]
skip-magic-trailing-comma = false
# indent-style = "space"
# preview = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C9",  # mccabe
    # "D",  # flake8-docstrings
    "E",  # pycodestyle errors (default)
    "F",  # pyflakes (default)
    "I",  # isort
    "PD", # pandas-vet
    "PIE", # pie
    # "PL",  # pylint
    # "PTH", # pathlib
    "Q",  # flake8-quotes
    "RET", # return
    "RUF", # Enable all ruff-specific checks
    "SIM", # simplify
    "S307", # eval
    # "T20",  # (disallow print statements) keep debugging statements out of the codebase
    "W",  # pycodestyle warnings
    "ASYNC", # async
]

ignore = [
    "E501",  # Line too long, handled by ruff formatter
    "D107", # "Missing docstring in __init__",
]

# unfixable = [
#     "F401" # Unused imports.
# ]

#extend-select = []


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.4",
    "setuptools>=74.1.2",
    "streamlit>=1.38.0",
]
